purge kotlin. Fix lint